# n8n-rustful-operator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  rustfmt.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yml  docker.yml  e2e.yml  release.yml
features/: cluster.feature  cucumber.rs  instance.feature  single.feature
src/: controller.rs  crdgen.rs  error.rs  labels.rs  lib.rs  main.rs  metrics.rs  state.rs  telemetry.rs
src/builders/: cluster_deployment.rs  deployment.rs  destination_rule.rs  hpa.rs  http_route.rs  ingress.rs  mod.rs  pvc.rs  service.rs  volumes.rs
src/env/: community.rs  database.rs  logging.rs  mod.rs  redis.rs  smtp.rs  storage.rs
src/metrics/: labels.rs  mod.rs  reconcile.rs
src/reconciler/: cluster.rs  cluster_apply.rs  cluster_main.rs  cluster_main_volumes.rs  cluster_status.rs  cluster_webhook.rs  cluster_worker.rs  ctx.rs  encryption.rs  mod.rs  networking.rs  owner.rs  run.rs  single.rs  single_apply.rs  single_children.rs  single_status.rs  single_validate.rs  validate.rs
src/spec/: cluster.rs  common.rs  community.rs  database.rs  logging.rs  mod.rs  networking.rs  pod.rs  redis.rs  roles.rs  single.rs  smtp.rs  storage.rs
tests/: builders.rs  cucumber.rs  env.rs  gateway_guard.rs  istio_guard.rs  user_env.rs  validation.rs
tests/features/: instance.feature
yaml/: cluster-sample.yaml  crd.yaml  install.yaml  instance-sample.yaml  single-sample.yaml
