[package]
name = "n8n-rustful-operator"
version = "0.0.1"
authors = ["Jakub Slys <jakub.k.slys@gmail.com>"]
edition = "2024"
default-run = "n8n-rustful-operator"
license = "Apache-2.0"
description = "Kubernetes operator that reconciles n8n.slys.dev/Instance into n8n Deployments"
repository = "https://github.com/jakub-k-slys/n8n-rustful-operator"
publish = false

[[bin]]
doc = false
name = "n8n-rustful-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "n8n_rustful_operator"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.12.1"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
prometheus-client = "0.24.1"
jiff = "0.2.28"
rand = "0.9"
hex = "0.4"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "4"

[dev-dependencies]
cucumber = "0.23"

[[test]]
name = "cucumber"
path = "features/cucumber.rs"
harness = false

